made nav on mobile/tablet view cool and fixed button size

--- a/chamber/css/main.css
+++ b/chamber/css/main.css
@@ -63,7 +63,7 @@ div.date h2 {
   text-align: center;
 }
 div.img_btn button {
-  font-size: 2em;
+  font-size: 2.25em;
   background: transparent;
   border: none;
   color: white;
@@ -75,14 +75,25 @@ button span:nth-child(2) {
 nav ul li {
   display: none;
   list-style: none;
-  border-top: 1px solid black;
+  border-bottom: 1px solid lightgrey;
+  padding: 15px;
 }
 nav ul li a {
   text-decoration: none;
   list-style: none;
   margin: 0;
+  color: white;
 }
 /* When hamburger button is clicked*/
+header {
+  position: relative;
+}
+header.open img {
+  display: none;
+}
+header.open div.info {
+  display: none;
+}
 
 button.open span:nth-child(1) {
   display: none;
@@ -93,10 +104,16 @@ button.open span:nth-child(2) {
 }
 nav ul.open {
   padding-left: 0;
-  background-color: white;
+  background-color: #022765;
   text-align: center;
   position: absolute;
   padding: 5px;
+  top: 20px;
+  left:0px;
+  min-width: 100%;
+  min-height: 100%;
+  opacity: .9;
+  padding-bottom: 100px;
   
 }
 nav ul.open li {
